# amazon-review-scraper

./: .env.example  Dockerfile  Makefile  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/amazon_review_scraper/: api.py  config.py  database.py  models.py  tasks.py
src/amazon_review_scraper/sources/: __init__.py  base.py  free.py  oxylabs.py
tests/: __init__.py  conftest.py  test_api.py
